OSS: update java & slf4j, use checker-qual, restrict xml parsing